Bug 356278 - dolphin does not show any file information in copy dialog
Summary: dolphin does not show any file information in copy dialog
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 357395 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-12-04 14:41 UTC by suse.junky
Modified: 2016-02-13 14:01 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description suse.junky 2015-12-04 14:41:11 UTC
If you try to overwrite a file, the dolphin confirmation dialogue will only show
the source and destination file name. Details (like size, date, ...) on the files are missing. So it's hard to decide whether to overwrite or not.

Reproducible: Always

Steps to Reproduce:
1. Open Dolphin (ideally in split view)
2. Set a folder on every side, with file(s) off the same name in both directories.
3. Drag file(s) from one side to the other and select "copy".


Actual Results:  
A confirmation dialogue to overwrite the destination file(s) is presented (as expected) but its only shows the files of the source and the destination file. Additional information like date, size, etc. are missing.

Expected Results:  
The confirmation dialogue should contain information like date, size, etc. for source and destination file. 




System:

openSUSE 42.1
Kernel 4.3.0-21.g0e6e680-default x86_64
plasma5-workspace 5.4.3-6.1 x86_64
dolphin 15.08.3-4.2 x86_64
libQt5Core5 5.5.0-2.1 x86_64
baloo5 5.16.0-3.1 x86_64

desktop search is disabled
Comment 1 Frank Reininghaus 2016-01-10 10:01:11 UTC
*** Bug 357395 has been marked as a duplicate of this bug. ***
Comment 2 Janet 2016-02-01 16:17:46 UTC
I can confirm this on Netrunner 17/Kubuntu 15.10, also with dolphin 15.08 and with enabled desktop search. 

And it's not only the file  information that's missing, also the preview of the file is missing which IMHO for images is as important as information about date, size and dimension.

With the dialog in this state alas it is impossible to decide which file to keep.
Comment 3 Ömer 2016-02-01 17:53:01 UTC
Same problem on Archlinux
Comment 4 Soukyuu 2016-02-01 21:20:04 UTC
Happens with both dolphin and dolphin4 for me as well (so shouldn't be a qt issue). 
arch linux x64, up to date.
Comment 5 suse.junky 2016-02-02 14:50:46 UTC
Still happens with dolphin Version 15.12.1, KDE Frameworks 5.16.0 and Qt 5.5.1 in openSUSE 42.1.

The problem renders dolphin useless as far as file copy is concerned.
Comment 6 Janet 2016-02-02 15:25:47 UTC
It's not dolphin related, it happens with krusader too.
Comment 7 David Faure 2016-02-06 09:56:55 UTC
Indeed, this is still a TODO in the KF5 redesign.

kio/src/widgets/renamedialog.cpp says
#pragma message("TODO: use KFileMetaDataWidget in RenameDialog via a plugin")
#if 0 // PENDING

KIO is tier3 and could in theory depend on KFileMetaData which is tier2, but that would bring it a ton more dependencies (KFileMetaData depends on poppler, taglib, exiv2, ffmpeg, epub...). Hence the idea of a plugin provided by KFileMetaData, but the base class for the plugin would be in KIO so the plugin can't be in KFileMetaData... It has to be in frameworkintegration then, that's what it's for. I'll work on this in the next month, too late for KF 5.19 which I'm releasing today.
Comment 8 David Faure 2016-02-13 14:01:10 UTC
Git commit 83578134b3ddb090248e6db1a699d9bdf7428fe0 by David Faure.
Committed on 13/02/2016 at 14:01.
Pushed by dfaure into branch 'master'.

KIO RenameDialog: restore preview support, add date and size labels.
FIXED-IN: 5.20.0

M  +64   -39   src/widgets/renamedialog.cpp
M  +0    -2    src/widgets/renamedialog.h

http://commits.kde.org/kio/83578134b3ddb090248e6db1a699d9bdf7428fe0