KIO RenameDialog: restore preview support, add date and size labels.

BUG: 356278
FIXED-IN: 5.20.0